# gazetteer

./: .gitignore  Dockerfile  README.md  build.py  build.sh  config.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  release.yaml
src/: build.py  config.py  gadm.py  geonames.py  main.py
